--- a/OS2/Makefile
+++ b/OS2/Makefile
@@ -3,6 +3,8 @@ ASM = nasm
 SRC_DIR = src
 BUILD_DIR = build
 
+all: clean floppy_image bootloader kernel
+
 # Floppy disk image
 # Builds the image needed for the bootloader
 #trunacte make sure to fill the rest of the "floppy" which has 1440k bytes
@@ -25,10 +27,13 @@ $(BUILD_DIR)/main.img: bootloader kernel
 # Creates a bin file from boot.asm and places it in build directory
 bootloader: $(BUILD_DIR)/bootloader.bin
 $(BUILD_DIR)/bootloader.bin:
-	$(ASM) $(SRC_DIR)/bootloader/boot.asm -f bin -o $(BUILD_DIR)/bootloader.bin
+	$(ASM) $(SRC_DIR)/bootloader/boot.asm -f bin -o $(BUILD_DIR)/bootloader.bin    
 
 # Kernel
 # Creates a bin file from main.asm and places it in build directory
 kernel: $(BUILD_DIR)/kernel.bin
 $(BUILD_DIR)/kernel.bin:
 	$(ASM) $(SRC_DIR)/kernel/main.asm -f bin -o $(BUILD_DIR)/kernel.bin
+
+clean:
+	rm -rf build/*
