--- a/OS2/Makefile
+++ b/OS2/Makefile
@@ -1,4 +1,4 @@
-ASM = nasm
+ASM=nasm
 CC16=/usr/bin/watcom/binl/wcc
 CFLAGS16=-s -wx -ms -zl -zq
 LD16=/usr/bin/watcom/binl/wlink
@@ -6,8 +6,7 @@ ASM_FLAGS=-f obj
 SRC_DIR=src
 BUILD_DIR=build
 
-all: clean always floppy_image bootloader kernel
-
+all: clean always floppy_image bootloader kernel 
 # Floppy disk image
 # Builds the image needed for the bootloader
 #trunacte make sure to fill the rest of the "floppy" which has 1440k bytes
@@ -30,7 +29,7 @@ $(BUILD_DIR)/main.img: bootloader kernel
 # Creates a bin file from boot.asm and places it in build directory
 bootloader: $(BUILD_DIR)/bootloader.bin
 $(BUILD_DIR)/bootloader.bin:
-	$(ASM) $(SRC_DIR)/bootloader/boot.asm -f bin -o $(BUILD_DIR)/bootloader.bin    
+	$(ASM) $(SRC_DIR)/bootloader/boot.asm -f bin -o $(BUILD_DIR)/bootloader.bin      
 
 # Kernel
 # Creates a bin file from main.asm and places it in build directory
@@ -44,10 +43,10 @@ $(BUILD_DIR)/kernel.bin:
 	$(LD16) NAME $(BUILD_DIR)/kernel.bin FILE \{$(BUILD_DIR)/kernel/asm/main.obj $(BUILD_DIR)/kernel/asm/print.obj $(BUILD_DIR)/kernel/c/main.obj $(BUILD_DIR)/kernel/c/stdio.obj $(BUILD_DIR)/kernel/asm/asmDisk.obj \} OPTION MAP=${BUILD_DIR}/kernel.map @${SRC_DIR}/kernel/linker.lnk
 
 always:
-	mkdir -p ${BUILD_DIR}
-	mkdir -p ${BUILD_DIR}/kernel
-	mkdir -p ${BUILD_DIR}/kernel/asm
-	mkdir -p ${BUILD_DIR}/kernel/c
+	mkdir -p $(BUILD_DIR)
+	mkdir -p $(BUILD_DIR)/kernel
+	mkdir -p $(BUILD_DIR)/kernel/asm
+	mkdir -p $(BUILD_DIR)/kernel/c
 
 clean:
 	rm -rf build/*
